OAK-158: Specify fixed memory settings for unit and integration tests
Changes based on Julian's patch

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1356715 13f79535-47bb-0310-9956-ffa450edef68